--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+        <!--
+        <script type="text/javascript" src="site/D3/d3.js"></script>
         <script src="http://d3js.org/d3.v3.min.js"></script>
+        -->
 
+        <script type="text/javascript" src="site/D3/d3.v3.min.js"></script>
         <script type="text/javascript" src="site/javascript/D3-visualization.js"></script>
 
         <style>
